# dithering

./: Cargo.toml  LICENSE  color_palette.json  dithered_cat.exr  edge_detected_cat.exr
assets/: embossed_loki.exr
clustering/: color_clustering.py  pyproject.toml
src/: main.rs
